added logo and mobile responsive menu; cleared old content

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar" role="navigation">
         <div class="navbar-brand">
-            <h1>Brandon King</h1>
+            <img src="assets/images/bk-logo.png" alt="logo image">
             <a href="#" role="button" class="navbar-burger" data-target="navbar-mobile">
                 <span aria-hidden="true"></span>
                 <span aria-hidden="true"></span>
@@ -19,7 +19,7 @@
             </a>
         </div>
         <div id="navbar-mobile" class="navbar-menu">
-            <div class="navbar-start">
+            <div class="navbar-end">
                 <a class="navbar-item" href="#about">About</a>
                 <a class="navbar-item" href="#work">Work</a>
                 <a class="navbar-item" href="#resume">Resume</a>
@@ -29,89 +29,13 @@
     </nav>
     
     <main>
-        <section id="about">
-            <header class="section-header">Who I Am</header>
-            <article id="about-text" class="clear">
-                <p>Hello there! My name is Brandon, and I am pursuing a career in full stack web development. I have a
-                    long history in the customer service industry and am currently working as a systems administrator
-                    for a local nonprofit.
-                <p>But I have always had an interest in web development. I remember learning html when GeoCities was
-                    popular, and I have tried to continually add to my skills ever since. </p>
-                <p>I have put together this page to showcase the web applications I am creating on my journey.</p>
-            </article>
-        </section>
-        <section id="work">
-            <header class="section-header">What I've Made</header>
-            <div class="card clear top-preview">
-                <h3>Big Brothers Big Sisters of Central Ohio</h3>
-                <a href="https://bbbscentralohio.org" target="_blank"><img src="assets/images/bbbs.png"
-                        alt="bbbs website" class="hero"></a>
-            </div>
-            <div class="preview-container">
-                <div class="card clear other-sites">
-                    <h3>Project 1</h3>
-                    <a href="#" target="_blank"><img src="assets/images/brennan-burling-ITtPnM7_oPw-unsplash.jpg"
-                            alt="placeholder image" class="preview"></a>
-                </div>
-                <div class="card clear other-sites">
-                    <h3>Project 2</h3>
-                    <a href="#" target="_blank"><img src="assets/images/glenn-carstens-peters-P1qyEf1g0HU-unsplash.jpg"
-                            alt="placeholder image" class="preview"></a>
-                </div>
-                <div class="card clear other-sites">
-                    <h3>Project 3</h3>
-                    <a href="#" target="_blank"><img src="assets/images/edho-pratama-T6fDN60bMWY-unsplash.jpg"
-                            alt="placeholder image" class="preview"></a>
-                </div>
-                <div class="card clear other-sites">
-                    <h3>Project 4</h3>
-                    <a href="#" target="_blank"><img src="assets/images/webstacks-WbOR54pzvLM-unsplash.jpg"
-                            alt="placeholder image" class="preview"></a>
-                </div>
-            </div>
-        </section>
-        <section id="resume">
-            <header class="section-header">How I Got Here</header>
-            <article class="clear">
-                <h3>Skills</h3>
-                <ul>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                    <li>Wordpress</li>
-                    <li>Git</li>
-                </ul>
-            </article>
-            <article class="clear" id="Education">
-                <h3>Education</h3>
-                <h4>The Ohio State University</h4>
-                <p>B.A. Commnunication - 2009</p>
-                <p>Coding Bootcamp - 2021</p>
-            </article>
-            <article class="clear" id="jobs">
-                <h3>Experience</h3>
-                <h4>Big Brothers Big Sisters of Central Ohio</h4>
-                <p>2017 - Present</p>
-                <p>Technology & Operations Specialist</p>
-            </article>
-        </section>
-        <section id="contact">
-            <header class="section-header">Where to Find Me</header>
-            <ul class="clear">
-                <li><a href="tel:6145633108" target="_blank"><i class="fas fa-mobile" name="Phone"></i> </a></li>
-                <li><a href="mailto:brandonscottking@gmail.com" target="_blank"><i class="far fa-envelope"
-                            name="Email"></i> </a></li>
-                <li><a href="https://github.com/thebsking" target="_blank"><i class="fab fa-github"
-                            name="Github"></i></a> </li>
-                <li><a href="https://linkedin.com/in/brandonsking" target="_blank"><i class="fab fa-linkedin-in"
-                            name="LinkedIn"></i></a> </li>
-            </ul>
-        </section>
-        <footer>
-            <h5>Created by BK &copy; 2021</h5>
-            <p>stock images from <a href="https://unsplash.com">Unsplash</a></p>
-        </footer>
+        <div id="welcome"></div>
+        
     </main>
+    <footer>
+        <h5>Created by BK &copy; 2021</h5>
+        <p>stock images from <a href="https://unsplash.com">Unsplash</a></p>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="assets/js/index.js"></script>
 </body>
