--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <nav class="navbar" role="navigation">
-        <div class="navbar-brand">
-            <img src="assets/images/bk-logo.png" alt="logo image">
+    <nav class="navbar is-fixed-top is-dark is-transparent" role="navigation">
+        <div class="navbar-brand is-dark">
+            <a href="#welcome"><img id="logo" src="assets/images/bk-logo.png" alt="logo image"></a>
             <a href="#" role="button" class="navbar-burger" data-target="navbar-mobile">
                 <span aria-hidden="true"></span>
                 <span aria-hidden="true"></span>
@@ -30,7 +30,20 @@
     
     <main>
         <div id="welcome"></div>
-        
+        <div id="about"></div>
+        <div id="work">
+            <div class="card">
+                <header class="card-header">
+                    <h2 class="card-header-title is-centered">Project 1</h2>
+                </header>
+                <section class="card-image">
+                    <img class="is-center" src="https://bulma.io/images/placeholders/1280x960.png" alt="placeholders">
+                </section>
+                <article class="card-content">
+                    <p class="content">This is the description of my project</p>
+                </article>
+            </div>
+        </div>
     </main>
     <footer>
         <h5>Created by BK &copy; 2021</h5>
