--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="utf-8">
     <title>Brandon King's Web Portfolio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+    <script src="https://kit.fontawesome.com/0e3602565a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
     <nav class="navbar is-fixed-top is-dark is-transparent" role="navigation">
         <div class="navbar-brand is-dark">
-            <a href="#welcome"><img id="logo" src="assets/images/bk-logo.png" alt="logo image"></a>
+            <img id="logo" src="assets/images/bk-logo.png" alt="logo image">
             <a href="#" role="button" class="navbar-burger" data-target="navbar-mobile">
                 <span aria-hidden="true"></span>
                 <span aria-hidden="true"></span>
@@ -29,21 +30,25 @@
     </nav>
     
     <main>
-        <div id="welcome"></div>
-        <div id="about"></div>
-        <div id="work">
+        <section id="welcome"></section>
+        <section id="about"></section>
+        <section id="work">
             <div class="card">
                 <header class="card-header">
                     <h2 class="card-header-title is-centered">Project 1</h2>
                 </header>
-                <section class="card-image">
-                    <img class="is-center" src="https://bulma.io/images/placeholders/1280x960.png" alt="placeholders">
-                </section>
-                <article class="card-content">
-                    <p class="content">This is the description of my project</p>
+                <article class="card-image">
+                    <img class="image is-centered" src="https://bulma.io/images/placeholders/800x480.png" alt="placeholders">
                 </article>
+                <p class="card-content content">This is the description of my project</p>
             </div>
-        </div>
+        </section>
+        <section id="contact">
+            <span class="icon"><i class="fab fa-github"></i></span>
+            <span class="icon"><i class="fab fa-github"></i></span>
+            <span class="icon"><i class="fab fa-github"></i></span>
+            <span class="icon"><i class="fab fa-github"></i></span>
+        </section>
     </main>
     <footer>
         <h5>Created by BK &copy; 2021</h5>
