--- a/index.html
+++ b/index.html
@@ -42,12 +42,30 @@
                 </article>
                 <p class="card-content content">This is the description of my project</p>
             </div>
+            <div class="card">
+                <header class="card-header">
+                    <h2 class="card-header-title is-centered">Project 2</h2>
+                </header>
+                <article class="card-image">
+                    <img class="image is-centered" src="https://bulma.io/images/placeholders/800x480.png" alt="placeholders">
+                </article>
+                <p class="card-content content">This is the description of my project</p>
+            </div>
+            <div class="card">
+                <header class="card-header">
+                    <h2 class="card-header-title is-centered">Project 3</h2>
+                </header>
+                <article class="card-image">
+                    <img class="image is-centered" src="https://bulma.io/images/placeholders/800x480.png" alt="placeholders">
+                </article>
+                <p class="card-content content">This is the description of my project</p>
+            </div>
         </section>
         <section id="contact">
             <span class="icon"><i class="fab fa-github"></i></span>
-            <span class="icon"><i class="fab fa-github"></i></span>
-            <span class="icon"><i class="fab fa-github"></i></span>
-            <span class="icon"><i class="fab fa-github"></i></span>
+            <span class="icon"><i class="fab fa-linkedin-in"></i></span>
+            <span class="icon"><i class="far fa-paper-plane"></i></span>
+            <span class="icon"><i class="fas fa-mobile"></i></span>
         </section>
     </main>
     <footer>
