added google fonts

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <title>Brandon King's Web Portfolio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Lato:wght@300&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/0e3602565a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -31,7 +33,9 @@
     
     <main>
         <section id="welcome"></section>
-        <section id="about"></section>
+        <section id="about">
+            <p>This is where my about info will go...</p>
+        </section>
         <section id="work">
             <div class="card">
                 <header class="card-header">
