add click events on project cards

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <p>This is where my about info will go...</p>
         </section>
         <section id="work">
-            <div class="card">
+            <div class="card" id="travel-planner">
                 <header class="card-header">
                     <h2 class="card-header-title is-centered">Project 1</h2>
                 </header>
@@ -46,7 +46,7 @@
                 </article>
                 <p class="card-content content">This is the description of my project</p>
             </div>
-            <div class="card">
+            <div class="card" id="weather-search">
                 <header class="card-header">
                     <h2 class="card-header-title is-centered">Project 2</h2>
                 </header>
@@ -55,7 +55,7 @@
                 </article>
                 <p class="card-content content">This is the description of my project</p>
             </div>
-            <div class="card">
+            <div class="card" id="workday-planner">
                 <header class="card-header">
                     <h2 class="card-header-title is-centered">Project 3</h2>
                 </header>
