--- a/index.html
+++ b/index.html
@@ -39,28 +39,28 @@
         <section id="work">
             <div class="card" id="travel-planner">
                 <header class="card-header">
-                    <h2 class="card-header-title is-centered">Project 1</h2>
+                    <h2 class="card-header-title is-centered">Travel Planning App</h2>
                 </header>
                 <article class="card-image">
-                    <img class="image is-centered" src="https://bulma.io/images/placeholders/800x480.png" alt="placeholders">
+                    <img class="image is-centered" src="assets/images/travel-preview.png" alt="placeholders">
                 </article>
                 <p class="card-content content">This is the description of my project</p>
             </div>
             <div class="card" id="weather-search">
                 <header class="card-header">
-                    <h2 class="card-header-title is-centered">Project 2</h2>
+                    <h2 class="card-header-title is-centered">Weather Forecast App</h2>
                 </header>
                 <article class="card-image">
-                    <img class="image is-centered" src="https://bulma.io/images/placeholders/800x480.png" alt="placeholders">
+                    <img class="image is-centered" src="assets/images/weather-search.gif" alt="placeholders">
                 </article>
                 <p class="card-content content">This is the description of my project</p>
             </div>
             <div class="card" id="workday-planner">
                 <header class="card-header">
-                    <h2 class="card-header-title is-centered">Project 3</h2>
+                    <h2 class="card-header-title is-centered">Day Planner App</h2>
                 </header>
                 <article class="card-image">
-                    <img class="image is-centered" src="https://bulma.io/images/placeholders/800x480.png" alt="placeholders">
+                    <img class="image is-centered" src="assets/images/planner-preview.png" alt="placeholders">
                 </article>
                 <p class="card-content content">This is the description of my project</p>
             </div>
