styled contact icons; added hover effects in menu

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <nav class="navbar is-fixed-top is-dark is-transparent" role="navigation">
+    <nav class="navbar is-fixed-top is-dark" role="navigation">
         <div class="navbar-brand is-dark">
             <img id="logo" src="assets/images/bk-logo.png" alt="logo image">
             <a href="#" role="button" class="navbar-burger" data-target="navbar-mobile">
@@ -66,10 +66,10 @@
             </div>
         </section>
         <section id="contact">
-            <span class="icon"><i class="fab fa-github"></i></span>
-            <span class="icon"><i class="fab fa-linkedin-in"></i></span>
-            <span class="icon"><i class="far fa-paper-plane"></i></span>
-            <span class="icon"><i class="fas fa-mobile"></i></span>
+            <span class="icon"><i id="github" class="fab fa-github"></i></span>
+            <span class="icon"><i id="LinkedIn" class="fab fa-linkedin-in"></i></span>
+            <span class="icon"><i id="Email" class="far fa-paper-plane"></i></span>
+            <span class="icon"><i id="mobile" class="fas fa-mobile"></i></span>
         </section>
     </main>
     <footer>
