--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         </div>
         <div id="navbar-mobile" class="navbar-menu">
             <div class="navbar-end">
-                <a class="navbar-item" href="#about">About</a>
-                <a class="navbar-item" href="#work">Work</a>
-                <a class="navbar-item" href="#resume">Resume</a>
-                <a class="navbar-item" href="#contact">Contact</a>
+                <a class="navbar-item" href="#about">About Me</a>
+                <a class="navbar-item" href="#work">My Work</a>
+                <a class="navbar-item" href="#resume">My Resume</a>
+                <a class="navbar-item" href="#contact">Contact Me</a>
             </div>
         </div>
     </nav>
@@ -34,7 +34,11 @@
     <main>
         <section id="welcome"></section>
         <section id="about">
-            <p>This is where my about info will go...</p>
+            <article id="about-me">
+                <p>hi there!</p>
+                <p>my name's brandon and i am an aspiring web developer. the majority of my experience is with html and css, but i am currently learning javascript, sql, react and other technologies.</p>
+                <p>check out a few of the apps i've made below and feel free to look me up on github or linkedin. you can even shoot me an email if you'd like!</p>
+            </article>
         </section>
         <section id="work">
             <div class="card" id="travel-planner">
@@ -66,10 +70,10 @@
             </div>
         </section>
         <section id="contact">
-            <span class="icon"><i id="github" class="fab fa-github"></i></span>
-            <span class="icon"><i id="LinkedIn" class="fab fa-linkedin-in"></i></span>
-            <span class="icon"><i id="Email" class="far fa-paper-plane"></i></span>
-            <span class="icon"><i id="mobile" class="fas fa-mobile"></i></span>
+            <span class="icon"><i id="github" class="fab fa-github-alt"></i></span>
+            <span class="icon"><i id="linkedin" class="fab fa-linkedin-in"></i></span>
+            <span class="icon"><i id="twitter" class="fab fa-twitter"></i></span>
+            <span class="icon"><i id="email" class="far fa-paper-plane"></i></span>
         </section>
     </main>
     <footer>
