added media query for card size

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     </nav>
     
     <main>
-        <section id="welcome"></section>
+        <section id="welcome">
+            <h2 id="coming-soon">More content coming soon!</h2>
+        </section>
         <section id="about">
             <article id="about-me">
                 <p>hi there!</p>
