moved media query to css for better respopnsiveness

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
             </div>
         </section>
         <section id="contact">
-            <span class="icon"><i id="github" class="fab fa-github-alt"></i></span>
-            <span class="icon"><i id="linkedin" class="fab fa-linkedin-in"></i></span>
-            <span class="icon"><i id="twitter" class="fab fa-twitter"></i></span>
-            <span class="icon"><i id="email" class="far fa-paper-plane"></i></span>
+            <span class="icon"><a target="_blank" href="https://github.com/thebsking"><i id="github" class="fab fa-github-alt"></i></a></span>
+            <span class="icon"><a target="_blank" href="https://linkedin.com/in/brandonsking"><i id="linkedin" class="fab fa-linkedin-in"></i></a></span>
+            <span class="icon"><a target="_blank" href="https://twitter.com/thebsking"><i id="twitter" class="fab fa-twitter"></i></a></span>
+            <span class="icon"><a target="_blank" href="mailto:brandonscottking@gmail.com"><i id="email" class="far fa-paper-plane"></i></a></span>
         </section>
     </main>
     <footer>
