sadded card descriptions; click events for modal

--- a/index.html
+++ b/index.html
@@ -30,7 +30,18 @@
             </div>
         </div>
     </nav>
-    
+    <div class="modal">
+        <div class="modal-background"></div>
+        <div class="modal-card">
+            <header class="modal-card-header">
+                <p class="modal-card-title">Coming Soon</p>
+                <button class="delete" aria-label="close"></button>
+            </header>
+            <article class="modal-card-body">
+                <p>A downloadable verison of my resume will be available soon. Thank you for your patience!</p>
+            </article>
+        </div>
+    </div>
     <main>
         <section id="welcome">
             <h2 id="coming-soon">More content coming soon!</h2>
@@ -47,28 +58,28 @@
                 <header class="card-header">
                     <h2 class="card-header-title is-centered">Travel Planning App</h2>
                 </header>
-                <article class="card-image">
+                <a><article class="card-image">
                     <img class="image is-centered" src="assets/images/travel-preview.png" alt="placeholders">
-                </article>
-                <p class="card-content content">This is the description of my project</p>
+                </article></a>
+                <p class="card-content content">A simple trip planning app. Enter your destination and dates to find the cheapest flight and the top 5 free attractions.</p>
             </div>
             <div class="card" id="weather-search">
                 <header class="card-header">
                     <h2 class="card-header-title is-centered">Weather Forecast App</h2>
                 </header>
-                <article class="card-image">
+                <a><article class="card-image">
                     <img class="image is-centered" src="assets/images/weather-search.gif" alt="placeholders">
-                </article>
-                <p class="card-content content">This is the description of my project</p>
+                </article></a>
+                <p class="card-content content">An app designed to check your local weather. Enter the name of your target city and see the current conditions as well as a 5-day forecast</p>
             </div>
             <div class="card" id="workday-planner">
                 <header class="card-header">
                     <h2 class="card-header-title is-centered">Day Planner App</h2>
                 </header>
-                <article class="card-image">
+                <a><article class="card-image">
                     <img class="image is-centered" src="assets/images/planner-preview.png" alt="placeholders">
-                </article>
-                <p class="card-content content">This is the description of my project</p>
+                </article></a>
+                <p class="card-content content">A simple planner application that you can use to plan out your work day. </p>
             </div>
         </section>
         <section id="contact">
