added headshot & styled

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         </section>
         <section id="about">
             <article id="about-me">
+                <img id="headshot" src="./assets/images/bk-headshot.png" alt="brandon headshot">
                 <p>hi there!</p>
                 <p>my name's brandon and i am an aspiring web developer. the majority of my experience is with html and css, but i am currently learning javascript, sql, react and other technologies.</p>
                 <p>check out a few of the apps i've made below and feel free to look me up on github or linkedin. you can even shoot me an email if you'd like!</p>
