added name, email, phone under headshot

--- a/index.html
+++ b/index.html
@@ -48,10 +48,15 @@
         </section>
         <section id="about">
             <article id="about-me">
-                <img id="headshot" src="./assets/images/bk-headshot.png" alt="brandon headshot">
+                <div id="my-info">
+                    <img id="headshot" src="./assets/images/bk-headshot.png" alt="brandon headshot">
+                    <p>brandon king | bk@email.com | 614-555-5555</p>
+                </div>
                 <p>hi there!</p>
-                <p>my name's brandon and i am an aspiring web developer. the majority of my experience is with html and css, but i am currently learning javascript, sql, react and other technologies.</p>
-                <p>check out a few of the apps i've made below and feel free to look me up on github or linkedin. you can even shoot me an email if you'd like!</p>
+                <p>my name's brandon and i am an aspiring web developer. the majority of my experience is with html and
+                    css, but i am currently learning javascript, sql, react and other technologies.</p>
+                <p>check out a few of the apps i've made below and feel free to look me up on github or linkedin. you
+                    can even shoot me an email if you'd like!</p>
             </article>
         </section>
         <section id="work">
@@ -59,42 +64,56 @@
                 <header class="card-header">
                     <h2 class="card-header-title is-centered">Travel Planning App</h2>
                 </header>
-                <a><article class="card-image">
-                    <img class="image is-centered" src="assets/images/travel-preview.png" alt="placeholders">
-                </article></a>
-                <p class="card-content content">A simple trip planning app. Enter your destination and dates to find the cheapest flight and the top 5 free attractions.</p>
+                <a>
+                    <article class="card-image">
+                        <img class="image is-centered" src="assets/images/travel-preview.png" alt="placeholders">
+                    </article>
+                </a>
+                <p class="card-content content">A simple trip planning app. Enter your destination and dates to find the
+                    cheapest flight and the top 5 free attractions.</p>
             </div>
             <div class="card" id="weather-search">
                 <header class="card-header">
                     <h2 class="card-header-title is-centered">Weather Forecast App</h2>
                 </header>
-                <a><article class="card-image">
-                    <img class="image is-centered" src="assets/images/weather-search.gif" alt="placeholders">
-                </article></a>
-                <p class="card-content content">An app designed to check your local weather. Enter the name of your target city and see the current conditions as well as a 5-day forecast</p>
+                <a>
+                    <article class="card-image">
+                        <img class="image is-centered" src="assets/images/weather-search.gif" alt="placeholders">
+                    </article>
+                </a>
+                <p class="card-content content">An app designed to check your local weather. Enter the name of your
+                    target city and see the current conditions as well as a 5-day forecast</p>
             </div>
             <div class="card" id="workday-planner">
                 <header class="card-header">
                     <h2 class="card-header-title is-centered">Day Planner App</h2>
                 </header>
-                <a><article class="card-image">
-                    <img class="image is-centered" src="assets/images/planner-preview.png" alt="placeholders">
-                </article></a>
-                <p class="card-content content">A simple planner application that you can use to plan out your work day. </p>
+                <a>
+                    <article class="card-image">
+                        <img class="image is-centered" src="assets/images/planner-preview.png" alt="placeholders">
+                    </article>
+                </a>
+                <p class="card-content content">A simple planner application that you can use to plan out your work day.
+                </p>
             </div>
         </section>
         <section id="contact">
-            <span class="icon"><a target="_blank" href="https://github.com/thebsking"><i id="github" class="fab fa-github-alt"></i></a></span>
-            <span class="icon"><a target="_blank" href="https://linkedin.com/in/brandonsking"><i id="linkedin" class="fab fa-linkedin-in"></i></a></span>
-            <span class="icon"><a target="_blank" href="https://twitter.com/thebsking"><i id="twitter" class="fab fa-twitter"></i></a></span>
-            <span class="icon"><a target="_blank" href="mailto:brandonscottking@gmail.com"><i id="email" class="far fa-paper-plane"></i></a></span>
+            <span class="icon"><a target="_blank" href="https://github.com/thebsking"><i id="github"
+                        class="fab fa-github-alt"></i></a></span>
+            <span class="icon"><a target="_blank" href="https://linkedin.com/in/brandonsking"><i id="linkedin"
+                        class="fab fa-linkedin-in"></i></a></span>
+            <span class="icon"><a target="_blank" href="https://twitter.com/thebsking"><i id="twitter"
+                        class="fab fa-twitter"></i></a></span>
+            <span class="icon"><a target="_blank" href="mailto:brandonscottking@gmail.com"><i id="email"
+                        class="far fa-paper-plane"></i></a></span>
         </section>
     </main>
     <footer>
         <h5>Created by BK &copy; 2021</h5>
         <p>stock images from <a href="https://unsplash.com">Unsplash</a></p>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="assets/js/index.js"></script>
 </body>
 
