added link for resume

--- a/index.html
+++ b/index.html
@@ -34,12 +34,15 @@
         <div class="modal-background"></div>
         <div class="modal-card">
             <header class="modal-card-header">
-                <p class="modal-card-title">Coming Soon</p>
+                <p class="modal-card-title">my resume</p>
                 <button class="delete" aria-label="close"></button>
             </header>
             <article class="modal-card-body">
-                <p>A downloadable verison of my resume will be available soon. Thank you for your patience!</p>
+                <p>thank you for your interest! please use the button below to view and/or download my resume</p>
             </article>
+            <footer class="modal-card-foot">
+                <button type="button" class="button" id="resume-btn">resume</button>
+            </footer>
         </div>
     </div>
     <main>
@@ -108,7 +111,7 @@
                         class="far fa-paper-plane"></i></a></span>
         </section>
     </main>
-    <footer>
+    <footer id="site-footer">
         <h5>Created by BK &copy; 2021</h5>
         <p>stock images from <a href="https://unsplash.com">Unsplash</a></p>
     </footer>
