added "typewriter" to welcome div

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
     </div>
     <main>
         <section id="welcome">
-            <h2 id="coming-soon">More content coming soon!</h2>
+            <h2 id="coming-soon">
+                i am <span class="text-rotate" data-period="2000" data-rotate='["brandon.", "a developer.", "usually hungry."]'></span>
+            </h2>
         </section>
         <section id="about">
             <article id="about-me">
