--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <article id="about-me">
                 <div id="my-info">
                     <img id="headshot" src="./assets/images/bk-headshot.png" alt="brandon headshot">
-                    <p>brandon king | bk@email.com | 614-555-5555</p>
+                    <p>brandon king | codebybk@gmail.com | 614.653.6419</p>
                 </div>
                 <p>hi there!</p>
                 <p>my name's brandon and i am an aspiring web developer. the majority of my experience is with html and
@@ -65,6 +65,17 @@
             </article>
         </section>
         <section id="work">
+            <div class="card" id="loo-review">
+                <header class="card-header">
+                    <h2 class="card-header-title is-centered">The Loo Review</h2>
+                </header>
+                <a>
+                    <article class="card-image">
+                        <img class="image is-centered" src="assets/images/loo-review.png" alt="placeholders">
+                    </article>
+                </a>
+                <p class="card-content content">Need to find a restroom in a hurry? Then the Loo Review is for you! </p>
+            </div>
             <div class="card" id="travel-planner">
                 <header class="card-header">
                     <h2 class="card-header-title is-centered">Travel Planning App</h2>
@@ -109,7 +120,7 @@
                         class="fab fa-linkedin-in"></i></a></span>
             <span class="icon"><a target="_blank" href="https://twitter.com/thebsking"><i id="twitter"
                         class="fab fa-twitter"></i></a></span>
-            <span class="icon"><a target="_blank" href="mailto:brandonscottking@gmail.com"><i id="email"
+            <span class="icon"><a target="_blank" href="mailto:codebybk@gmail.com"><i id="email"
                         class="far fa-paper-plane"></i></a></span>
         </section>
     </main>
