updated styling on cards

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </article>
         </section>
         <section id="work">
-            <div class="card" id="loo-review">
+            <div class="card" id="project-02">
                 <header class="card-header">
                     <h2 class="card-header-title is-centered">The Loo Review</h2>
                 </header>
