--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </header>
                 <a>
                     <article class="card-image">
-                        <img class="image is-centered" src="assets/images/loo-review.png" alt="placeholders">
+                        <img class="image is-centered" src="assets/images/loo-review.gif" alt="placeholders">
                     </article>
                 </a>
                 <p class="card-content content">Need to find a restroom in a hurry? Then the Loo Review is for you! </p>
@@ -100,16 +100,16 @@
                 <p class="card-content content">An app designed to check your local weather. Enter the name of your
                     target city and see the current conditions as well as a 5-day forecast</p>
             </div>
-            <div class="card" id="workday-planner">
+            <div class="card" id="note-taker">
                 <header class="card-header">
-                    <h2 class="card-header-title is-centered">Day Planner App</h2>
+                    <h2 class="card-header-title is-centered">Online Note Taker</h2>
                 </header>
                 <a>
                     <article class="card-image">
                         <img class="image is-centered" src="assets/images/planner-preview.png" alt="placeholders">
                     </article>
                 </a>
-                <p class="card-content content">A simple planner application that you can use to plan out your work day.
+                <p class="card-content content">A simple node application that you can use to create, edit and delete notes.
                 </p>
             </div>
         </section>
