style updates; moved resume from external link to downloadable doc

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
         <div class="modal-background"></div>
         <div class="modal-card">
             <header class="modal-card-header">
-                <p class="modal-card-title">my resume</p>
+                <p class="modal-card-title">my resumé</p>
                 <button class="delete" aria-label="close"></button>
             </header>
             <article class="modal-card-body">
-                <p>thank you for your interest! please use the button below to view and/or download my resume</p>
+                <p>thank you for your interest! please use the button below to view and/or download my resumé</p>
             </article>
             <footer class="modal-card-foot">
-                <button type="button" class="button" id="resume-btn">resume</button>
+                <button type="button" class="button" id="resume-btn">resumé</button>
             </footer>
         </div>
     </div>
@@ -88,6 +88,18 @@
                 <p class="card-content content">A simple trip planning app. Enter your destination and dates to find the
                     cheapest flight and the top 5 free attractions.</p>
             </div>
+            <div class="card" id="note-taker">
+                <header class="card-header">
+                    <h2 class="card-header-title is-centered">Online Note Taker</h2>
+                </header>
+                <a>
+                    <article class="card-image">
+                        <img class="image is-centered" src="assets/images/note-taker.png" alt="placeholders">
+                    </article>
+                </a>
+                <p class="card-content content">A simple application utilizing node.js that you can use to create, edit and delete notes.
+                </p>
+            </div>
             <div class="card" id="weather-search">
                 <header class="card-header">
                     <h2 class="card-header-title is-centered">Weather Forecast App</h2>
@@ -100,18 +112,7 @@
                 <p class="card-content content">An app designed to check your local weather. Enter the name of your
                     target city and see the current conditions as well as a 5-day forecast</p>
             </div>
-            <div class="card" id="note-taker">
-                <header class="card-header">
-                    <h2 class="card-header-title is-centered">Online Note Taker</h2>
-                </header>
-                <a>
-                    <article class="card-image">
-                        <img class="image is-centered" src="assets/images/planner-preview.png" alt="placeholders">
-                    </article>
-                </a>
-                <p class="card-content content">A simple node application that you can use to create, edit and delete notes.
-                </p>
-            </div>
+            
         </section>
         <section id="contact">
             <span class="icon"><a target="_blank" href="https://github.com/thebsking"><i id="github"
